--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,9 @@
     font-family: "McLaren", cursive;
     font-weight: 200;
   }
+  .note.completed {
+    text-decoration: line-through;
+  }
   
   footer {
     position: absolute;
